Fix animation gap when menu opened for the first time

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -160,6 +160,7 @@ body {
   list-style: none;
   padding: 6em;
   margin: 0;
+  margin-top: -16px;
   top: 0;
   bottom: 0;
   left: 0;
@@ -178,7 +179,6 @@ body {
 
 .header__nav__mobile[data-visible='true'] {
   opacity: 1;
-  top: 0;
   transform: translateX(0);
   transition: all 300ms ease-in;
 }
